<resources>
    <string name="app_name">NeWork</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="description_video">Video</string>
    <string name="create_account">Create account</string>
    <string name="sign_in_name">Sign In</string>
    <string name="sign_login">Login</string>
    <string name="sign_password">Password</string>
    <string name="sign_up_name">Sign Up</string>
    <string name="sign_repeat_password">Repeat password</string>
    <string name="sign_user_name">Login</string>
    <string name="name">Name</string>
    <string name="error_login">Authorization error</string>
    <string name="error_registration">Registration error</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_select_video">Select video</string>
    <string name="text_new_post">Write something here…</string>
    <string name="title_users">Users</string>
    <string name="title_posts">Posts</string>
    <string name="title_jobs">Jobs</string>
    <string name="text_job_name">Company</string>
    <string name="text_job_position">Position</string>
    <string name="text_job_start">Start date</string>
    <string name="text_job_finish">End Date</string>
    <string name="text_job_link">Link</string>
    <string name="text_job_now">Till now</string>
    <string name="empty_jobs">There are no jobs here…</string>
    <string name="description_author_avatar">Author avatar</string>
    <string name="description_attachment">Attachment</string>
    <string name="text_event_date">Event date</string>
    <string name="empty_events">There are no events here…</string>
    <string name="add_event">Add event</string>
    <string name="description_event_menu">Event menu</string>
    <string name="description_event_like">Like event</string>
    <string name="description_event_participate">Take part</string>
    <string name="description_pick_video">Select video</string>
    <string name="description_pick_audio">Select audio</string>
    <string name="enter_datetime">Enter datetime</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="title_events">Events</string>
    <string name="title_profile">Profile</string>
    <string name="set_date">Date (YYYY-MM-DD). Click to set date using calendar</string>
    <string name="set_time">Time (HH:mm). Click to set time using calendar</string>
</resources>